/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.server.proto;

option java_outer_classname = "ClusterStateRequestProto";

message ClusterStateReq {
  bool routingTable = 1;
  bool nodes = 2;
  bool metadata = 3;
  bool blocks = 4;
  bool customs = 5;
  int64 waitForMetadataVersion = 6;
  string waitForTimeout = 7;
  repeated string indices = 8;
}
